--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -52,10 +52,11 @@
   </div>
 
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">Manage Courses</h3>
+    <h3 class="subtitle">Side Bar</h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"> Import Courses</h4>
+    <h4 class="widgettitle"> Side Bar</h4>
     <div class="widgetcontent">
+      None
     </div>
   </div>
 </div> <!--row-fluid-->
