--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the admin/Admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+td#related-course {
+  ul {
+    list-style-type: none;
+    padding: 0 10px;
+  }
+}
