Adjust frontend layout. Add filter for course and competency.

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -8,3 +8,10 @@ td#related-course {
     padding: 0 10px;
   }
 }
+
+td#related-competency-level {
+  ul {
+    list-style-type: none;
+    padding: 0 10px;
+  }
+}
