--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -30,9 +30,14 @@
     padding: 0;
     margin: 0;
     li {
-      display: inline;
+      display: inline-block;
       margin-right: 5px;
-      img { width: 40px; }
+      .user-image-name {
+        text-align: center;
+        width: 40px;
+
+        img { width: 40px; }
+      }
     }
   }
 }
