--- a/app/views/admin/admin/competency.html.erb
+++ b/app/views/admin/admin/competency.html.erb
@@ -10,10 +10,8 @@
 <% content_for :javascript do %>
 <script type="text/javascript">
 $(function() {
-  //$('#datepicker').datepicker();
+  $('.tabbedwidget').tabs();
   $('.accordion').accordion({
-      collapsible: true,
-      active: false,
       heightStyle: "content",
       header: ".a-header"
   });
@@ -25,45 +23,99 @@ $(function() {
   <div id="dashboard-left" class="span8">
     <h3 class="subtitle">Competency Model</h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><span class="iconfa-home"></span> Competency Summary</h4>
-    <% if @competencies.size == 0 %>
+        <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= @position ? "Competency Requirements for " + @position.name : "Competency Model Summary" %></h4>
+    <% if (@competencies and @competencies.size == 0) and (@position) %>
     <div class="widgetcontent">
-      <p>No Competency Model setup yet. please setup it first. </p>
+      None
     </div>
     <% else %>
     <div class="widgetcontent nopadding">
       <div class="accordion">
+        <% if @competencies %>
         <% @competencies.each do |c| %>
         <div class="a-header">
           <a href="#"><%= c.name %><span class="pull-right"><%= "created at " + distance_of_time_in_words_to_now(c.created_at) + ' ago' %></span></a>
         </div>
         <div class="a-content">
-          <%= content_tag(:h5, "Competency description: " + c.description) %>
-          <% c.competency_levels.each do |cl| %>
-            <%= content_tag(:h6, "Level " + cl.level.to_s + ": " + cl.description) %>
-            <%= content_tag(:p, "Detail Requirements:") %>
+          <%= content_tag(:h5, "胜任力描述： " + c.description) %>
+          <div class="divider15"></div>
+          <div class="tabbedwidget">
             <ul>
+              <li><a href="#tabs-1"><%= level_name 1 %></a></li>
+              <li><a href="#tabs-2"><%= level_name 2 %></a></li>
+              <li><a href="#tabs-3"><%= level_name 3 %></a></li>
+              <li><a href="#tabs-4"><%= level_name 4 %></a></li>
+            </ul>
+          <% c.competency_levels.each_with_index do |cl, i| %>
+          <div class="competency-level-details" id="<%= 'tabs-' + (i+1).to_s %>">
+            <%= content_tag(:h6, "级别描述：" + cl.description) %>
+            <ul id="cl-requirements">
             <% cl.competency_level_requirements.each do |clr| %>
             <%= content_tag(:li, clr.description) %>
             <% end %>
             </ul>
+            <div class="divider15"></div>
+            <%= content_tag(:h6, "相关课程（" + cl.courses.size.to_s + "）：") %>
+            <ul id="cl-courses">
+              <% cl.courses.each do |course| %>
+              <li>
+                <div class="cl-course-banner">
+                  <%= link_to image_tag(course_cover_path(course, :small)), course_path(course), {:title => "#{course.title}"} %>
+                  <%= link_to course.title, course_path(course) %>
+                </div>
+              </li>
+              <% end %>
+            </ul>
+          </div>
           <% end %>
+          </div>
         </div>
+        <% end %>
+        <% else %> <!--if @competencies-->
+        <% @position.competency_levels.each do |cl| %>
+        <div class="a-header">
+          <a href="#"><%= cl.competency.name + "（" + level_name(cl.level) + "）" %></a>
+        </div>
+        <div class="a-content">
+          <div class="competency-level-details">
+            <%= content_tag(:h6, "级别描述：" + cl.description) %>
+            <ul id="cl-requirements">
+            <% cl.competency_level_requirements.each do |clr| %>
+            <%= content_tag(:li, clr.description) %>
+            <% end %>
+            </ul>
+            <div class="divider15"></div>
+            <%= content_tag(:h6, "相关课程（" + cl.courses.size.to_s + "）：") %>
+            <ul id="cl-courses">
+              <% cl.courses.each do |course| %>
+              <li>
+                <div class="cl-course-banner">
+                  <%= link_to image_tag(course_cover_path(course, :small)), course_path(course), {:title => "#{course.title}"} %>
+                  <%= link_to course.title, course_path(course) %>
+                </div>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+        <% end %>
         <% end %>
       </div>
     </div>
     <% end %>
-
-    <div class="well">
-      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i> Create New Competency</a>
-      <a href="<%= export_competencies_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
-    </div>
 
   </div> <!--span 8-->
 
   <div id="dashboard-right" class="span4">
     <h3 class="subtitle">Manage Competency</h3>
     <div class="divider15"></div>
+
+    <div class="well">
+      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i> Create New Competency</a>
+      <a href="<%= export_competencies_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
+    </div>
+
+
     <h4 class="widgettitle"> Import Competency Model</h4>
     <div class="widgetcontent">
       <%= form_tag import_competencies_path, multipart: true do %>
@@ -80,6 +132,20 @@ $(function() {
         </div>
       </div>
       <%= submit_tag "Import Competency".html_safe, :class => "btn btn-primary submit-import" %>
+      <% end %>
+    </div>
+
+    <h3 class="subtitle">Filter</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"> Filter</h4>
+    <div class="widgetcontent">
+      <%= form_tag competencies_path, :method => 'get' do %>
+      <div>
+        <%= label_tag :position_id, 'Position:' %>
+        <%= collection_select(nil, :position_id, Position.all, :id, :name, :prompt => false) %>
+      </div>
+        <%= submit_tag "Filter Competency".html_safe, :class => "btn btn-primary" %>
+        <%= link_to "Clear Filter",  competencies_path %>
       <% end %>
     </div>
   </div>
