--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -18,7 +18,7 @@
     <div class="divider15"></div>
     <div class="widgetbox">
       <div class="headtitle">
-        <h4 class="widgettitle"><span class="iconfa-folder-open"></span> Courses</h4>
+        <h4 class="widgettitle"><span class="iconfa-folder-open"></span> Courses (<%= @courses.total_count %>)</h4>
       </div>
       <% if @courses.size == 0 %>
       <div class="widgetcontent">
@@ -43,17 +43,18 @@
       </div>
       <% end %>
     </div>
-
-    <div class="well">
-      <a href="<%= new_course_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New Course</a>
-      <a href="<%= export_courses_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
-    </div>
   
   </div>
 
   <div id="dashboard-right" class="span4">
     <h3 class="subtitle">Manage Courses</h3>
     <div class="divider15"></div>
+
+    <div class="well">
+      <a href="<%= new_course_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New Course</a>
+      <a href="<%= export_courses_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
+    </div>
+
     <h4 class="widgettitle"> Import Courses</h4>
     <div class="widgetcontent">
       <%= form_tag import_courses_path, multipart: true do %>
@@ -70,6 +71,24 @@
         </div>
       </div>
       <%= submit_tag "Import Courses".html_safe, :class => "btn btn-primary submit-import" %>
+      <% end %>
+    </div>
+
+    <h3 class="subtitle">Filter</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"> Filter</h4>
+    <div class="widgetcontent">
+      <%= form_tag admin_manage_course_path, :method => 'get' do %>
+        <div>
+          <%= label_tag :teacher_id, "Teacher:" %>
+          <%= collection_select(nil, :teacher_id, User.teacher, :id, :name, {:include_blank => '请选择'}) %>
+        </div>
+        <div>
+          <%= label_tag :position_id, 'Position:' %>
+          <%= collection_select(nil, :position_id, Position.all, :id, :name, {:include_blank => '请选择'}) %>
+        </div>
+          <%= submit_tag "Filter Courses".html_safe, :class => "btn btn-primary" %>
+          <%= link_to "Clear Filter",  admin_manage_course_path %>
       <% end %>
     </div>
   </div>
