update header menu as the common link. Update the left menu.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -121,10 +121,21 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 
 .headmenu > li > a .head-icon { width: 50px; height: 50px; display: block; margin: auto; opacity: 0.5; }
 .headmenu > li > a:hover .head-icon, .headmenu > li.open a .head-icon { opacity: 1; }
+.headmenu > li > a .iconfa-envelope { font-size: 40px; }
+.headmenu > li > a .iconfa-calendar { font-size: 40px; }
+.headmenu > li > a .iconfa-certificate { font-size: 40px; }
+.headmenu > li > a .iconfa-signal { font-size: 40px; }
+.headmenu > li > a .iconfa-tasks { font-size: 40px; }
+.headmenu > li > a .iconfa-group { font-size: 40px; }
+.headmenu > li > a .iconfa-question-sign { font-size: 40px; }
+.headmenu > li > a .iconfa-book { font-size: 40px; }
+.headmenu > li > a .iconfa-briefcase { font-size: 40px; }
+.headmenu > li > a .iconfa-rss { font-size: 40px; }
 
-.head-message { background-image: url(<%= asset_data_uri 'message.png' %>); }
+
+/*.head-message { background-image: url(<%= asset_data_uri 'message.png' %>); }
 .head-users { background-image: url(../images/icons/users.png); }
-.head-bar { background-image: url(../images/icons/bar.png); }
+.head-bar { background-image: url(../images/icons/bar.png); }*/
 
 .viewmore a { font-size: 11px; text-transform: uppercase; font-size: 11px !important; }
 
