--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,15 +5,52 @@
   <div class="headerinner">
     <ul class="headmenu">
       <li class="odd">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          <span class="count">0</span>
-          <span class="head-icon head-message"></span>
-          <span class="headmenu-label">Messages</span>
+        <a href="">
+          <span class="head-icon iconfa-certificate"></span>
+          <span class="headmenu-label">考试中心</span>
         </a>
-        <ul class="dropdown-menu">
-          <li class="nav-header">Messages</li>
-          <li class="viewmore"><a href="#">No New Messages</a></li>
-        </ul>
+      </li>
+      <li>
+        <a href="<%= current_user.admin? ?  admin_manage_competency_path : competencies_path %>">
+          <span class="head-icon iconfa-signal"></span>
+          <span class="headmenu-label">能力中心</span>
+        </a>
+      </li>
+      <li class="odd">
+        <a href="<%= current_user.admin? ?  admin_manage_course_path : courses_path %>">
+          <span class="head-icon iconfa-tasks"></span>
+          <span class="headmenu-label">课程中心</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="head-icon iconfa-group"></span>
+          <span class="headmenu-label">讲师中心</span>
+        </a>
+      </li>
+      <li class="odd">
+        <a href="#">
+          <span class="head-icon iconfa-question-sign"></span>
+          <span class="headmenu-label">问答中心</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="head-icon iconfa-book"></span>
+          <span class="headmenu-label">图书馆</span>
+        </a>
+      </li>
+      <li class="odd">
+        <a href="#">
+          <span class="head-icon iconfa-briefcase"></span>
+          <span class="headmenu-label">案例中心</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="head-icon iconfa-rss"></span>
+          <span class="headmenu-label">学习社区</span>
+        </a>
       </li>
       <li class="right">
         <div class="userloggedinfo">
