--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -53,6 +53,12 @@
     </div>
   </div>
   <div id="dashboard-right" class="span4">
+    <% if current_user.admin? or @course.teacher?(current_user) %>
+    <div class="well">
+      <a href="<%= edit_course_path(@course) %>" class="btn btn-primary"><i class="iconfa-edit icon-white"></i> Edit</a>
+    </div>
+    <% end %>
+
     <h3 class="subtitle">about the teacher</h3>
     <div class="well about-teacher">
       <%= image_tag user_avatar_path(@course.teacher, :normal), :class => "pull-left" %>
