Add user relationship which can follow/unfollow user.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -1279,7 +1279,7 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input,
 .btn-large { -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; font-size: 14px; padding: 10px 20px; }
 
 .btn-primary, .btn-primary:link { background: #0866c6; border-color: #0a6bce; color: #fff; }
-.btn-primary:hover, .btn-primary:active, .btn:primary:focus,
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus,
 .btn-group.open .btn-primary.dropdown-toggle { background: #0a76e5; }
 .btn-danger, .btn-danger:link { background: #dd0000; border-color: #aa0000; }
 .btn-danger:hover, .btn-danger:active, .btn-danger:focus,
