--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -55,7 +55,7 @@
   <div id="dashboard-right" class="span4">
     <% if current_user.admin? or @course.teacher?(current_user) %>
     <div class="well">
-      <a href="<%= edit_course_path(@course) %>" class="btn btn-primary"><i class="iconfa-edit icon-white"></i> Edit</a>
+      <a href="<%= edit_course_path(@course) %>" class="btn btn-success"><i class="iconfa-edit icon-white"></i> Edit</a>
     </div>
     <% end %>
 
