--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -83,7 +83,21 @@
     <h3 class="subtitle">User Informations</h3>
     <div class="divider15"></div>
     <div class="well user-info-box">
-      <%= image_tag user_avatar_path(@user, :normal), :class => "pull-left" %>
+      <div class="user-info-image">
+        <%= image_tag user_avatar_path(@user, :normal) %>
+        <% unless @user.id == current_user.id %>
+          <% unless current_user.following?(@user) %>
+            <%= form_for(current_user.user_relations.build(leader_id: @user.id)) do |f| %>
+            <%= f.hidden_field :leader_id %>
+            <%= f.submit "加关注", class: "btn btn-mini btn-block btn-success " %>
+            <% end %>
+          <% else %>
+            <%= form_for(current_user.user_relations.find_by_leader_id(@user), html: { method: :delete }) do |f| %>
+            <%= f.submit "取消关注", class: "btn btn-mini btn-block btn-warning " %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
       <div class="user-info">
         <h4><%= link_to @user.name, user_path(@user) %></h4>
         <ul class="info-details">
