--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -27,11 +27,11 @@
     </div>
   </div>
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">sidebar here</h3>
+    <h3 class="subtitle">TIPS</h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"> Side Content</h4>
+    <h4 class="widgettitle"> Tips</h4>
     <div class="widgetcontent">
-      content
+      None
     </div>
   </div>
 </div>
