--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,25 +31,7 @@
       <li class="odd">
         <a href="#">
           <span class="head-icon iconfa-question-sign"></span>
-          <span class="headmenu-label">问答中心</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="head-icon iconfa-book"></span>
-          <span class="headmenu-label">图书馆</span>
-        </a>
-      </li>
-      <li class="odd">
-        <a href="#">
-          <span class="head-icon iconfa-briefcase"></span>
-          <span class="headmenu-label">案例中心</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="head-icon iconfa-rss"></span>
-          <span class="headmenu-label">学习社区</span>
+          <span class="headmenu-label">知识共享</span>
         </a>
       </li>
       <li class="right">
