--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -45,12 +45,12 @@
         <li class="<%= "active" if active == 'competency' %>"><a href="<%= admin_manage_competency_path %>"><span class="iconfa-sitemap"></span> <%= t('menu.admin.competency') %></a></li>
         <li class="<%= "active" if active == 'courses' %>"><a href="<%= admin_manage_course_path %>"><span class="iconfa-folder-open"></span> <%= t('menu.admin.course') %></a></li>
         <li class="<%= "active" if active == 'positions' %>"><a href="<%= admin_manage_position_path %>"><span class="iconfa-reorder"></span> <%= t('menu.admin.position') %></a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 考试管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 讲师管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 培训计划管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 能力评估管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 社区管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-check"></span> 统计中心</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-certificate"></span> 考试管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-user"></span> 讲师管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-calendar"></span> 培训计划管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-signal"></span> 能力评估管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-rss"></span> 社区管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-bar-chart"></span> 统计中心</a></li>
       </ul>
       </li>
       <% end %>
